8322985: [BACKOUT] 8318562: Computational test more than 2x slower when AVX instructions are used

Reviewed-by: shade, kvn
Backport-of: ed9f3243f04718a50bbdc589437872f7215c0e08